# agriconto-pro

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  README_DESKTOP.md  RELEASE_CHECKLIST.md  ROADMAP.md  SECURITY.md  docker-compose.yml  package.json
backend/: .env.example  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_foundation.py  0002_report_exports_metadata.py
backend/app/: main.py
backend/app/analytics/: __init__.py
backend/app/analytics/api/: analytics.py
backend/app/analytics/schemas/: __init__.py  filters.py
backend/app/analytics/services/: center.py
backend/app/api/: deps.py
backend/app/core/: audit.py  config.py  exceptions.py  logging.py  permissions.py  security.py
backend/app/models/: __init__.py  domain.py  enums.py  farm.py  mixins.py  user.py
backend/app/reports/: pdf_renderer.py  report_exporter.py  services.py
backend/app/repositories/: base.py
backend/app/schemas/: auth.py  common.py  domain.py  farm.py
backend/app/services/: audit.py  auth.py  crud.py  farms.py  permissions.py
backend/app/tests/: test_analytics_security.py  test_api_foundation.py  test_audit_logging.py  test_demo_seed.py  test_file_storage.py  test_phase11_api_contract.py  test_phase11_audit_flows.py  test_phase11_authentication.py  test_phase11_authorization_bola.py  test_phase11_validation.py  test_report_exporter.py  test_reports_security.py  test_security_foundation.py
backend/scripts/: seed_demo.py
docs/: ANALYTICS.md  (+20 more)
(+106 files in other folders)
