[project]
name = "agriconto-pro-backend"
version = "0.1.0"
description = "FastAPI backend for AgriConto Pro"
requires-python = ">=3.11"
dependencies = [
  "alembic>=1.13.1",
  "bcrypt>=4.1.2",
  "email-validator>=2.1.1",
  "fastapi>=0.110.0",
  "psycopg[binary]>=3.1.18",
  "pydantic-settings>=2.2.1",
  "python-jose[cryptography]>=3.3.0",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0.28",
  "uvicorn[standard]>=0.27.1"
]

[project.optional-dependencies]
dev = ["pytest>=8.1.1", "httpx>=0.27.0", "ruff>=0.3.4"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.setuptools.packages.find]
include = ["app*"]
